Quickfix for Java 11
add replacements for removed Java modules java.xml.bind and
javax.activation according to:

https://stackoverflow.com/a/52502208
https://stackoverflow.com/a/46493809